--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.main.banner-mode=off
 
 #mail info
 spring.mail.host=smtp.gmail.com
-spring.mail.username=smartechnologyGpec@gmail.com
-spring.mail.password=smartGpecApp
+spring.mail.username=
+spring.mail.password=
 spring.mail.port=587
 spring.mail.properties.mail.smtp.starttls.enable= true
 spring.mail.properties.mail.smtp.auth=true
